gateway/1.4/modules/ROOT/pages/flex-install.adoc
= Downloading Flex Gateway
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images

Download and install Flex Gateway as a Linux service, or download the Flex Gateway image from the Docker registry. Downloading is a prerequisite to registering and running a gateway as a Linux service or in a Docker container, Kubernetes cluster, or OpenShift cluster.

 * To run Flex Gateway inside a virtual machine (VM), download and install it as a Linux service.
 * To run Flex Gateway in a Docker container, download the Flex Gateway image.
 * To run Flex Gateway in a Kubernetes cluster, download the Flex Gateway image.
 * To run Flex Gateway in an OpenShift cluster, download the Flex Gateway image.

See xref:flex-review-prerequisites.adoc[] for details about hardware and software requirements.

[cols="1a,1a,1a,1a"]
|===
|image:install-linux-logo.png[20%,20%,xref="#linux"]
|image:install-docker-logo.png[25%,25%,xref="#docker"]
|image:install-kubernetes-logo.png[20%,20%,xref="#kubernetes"]
|image:install-openshift-logo.png[20%,20%,xref="#openshift"]

|<<linux,Linux>>
|<<docker,Docker>>
|<<kubernetes,Kubernetes>>
|<<openshift,OpenShift>>
|===

[[linux]]
== Download and Install as a Linux Service

You can download and install Flex Gateway as a service in one of the following Linux environments:
[cols="1a,1a,1a,1a,1a"]
|===
|image:install-ubuntu-logo.png[20%,20%,xref="#install-ubuntu"]
|image:install-debian-logo.png[17%,17%,xref="#install-debian"]
|image:install-amazon-linux-logo.png[22%,22%,xref="#install-amazon-linux"]
|image:install-rhel-logo.png[23%,23%,xref="#install-rhel"]
|image:install-centos-logo.png[20%,20%,xref="#install-centos"]

|<<install-ubuntu,Ubuntu>>
|<<install-debian,Debian>>
|<<install-amazon-linux,Amazon Linux>>
|<<install-rhel,RHEL>>
|<<install-centos,CentOS>>
|===

[[install-ubuntu]]
=== Ubuntu

==== Software Requirements

Flex Gateway runs on the following Long Term Support (LTS) versions of Ubuntu:

* {empty}
include::partial$prerequisites.adoc[tag=ubuntu]

==== Before You Begin

Before getting started, ensure that you have installed the following:

* link:https://gnupg.org/[gnupg2^]
* link:https://refspecs.linuxfoundation.org/LSB_3.0.0/LSB-PDA/LSB-PDA/lsbrelease.html[lsb_release^]

==== Run Installation Commands

To download and install Flex Gateway as a Ubuntu service run the command block which performs the following actions:

* Retrieves the public package keys and adds the package repository
* Updates the package list
* Updates `apt-get`
* Installs the Flex Gateway package

[source,ssh]
----
curl -XGET https://flex-packages.anypoint.mulesoft.com/ubuntu/pubkey.gpg | sudo apt-key add -
echo "deb [arch=amd64] https://flex-packages.anypoint.mulesoft.com/ubuntu $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/mulesoft.list
sudo apt update
sudo apt install -y flex-gateway
----

include::partial$reference-install-next-steps.adoc[tags=flex-download-install;flex-connected-vs-local]

[[install-debian]]
=== Debian

==== Software Requirements

Flex Gateway runs on the following Long Term Support (LTS) versions of Debian:

* {empty}
include::partial$prerequisites.adoc[tag=debian]

==== Before You Begin

Before getting started, ensure that you have installed the following:

* link:https://gnupg.org/[gnupg2^]
* link:https://refspecs.linuxfoundation.org/LSB_3.0.0/LSB-PDA/LSB-PDA/lsbrelease.html[lsb_release^]

==== Run Installation Commands

To download and install Flex Gateway as a Debian service run the command block which performs the following actions:

* Retrieves the public package keys and adds the package repository
* Updates the package list
* Updates `apt-get`
* Installs the Flex Gateway package

[source,ssh]
----
curl -XGET https://flex-packages.anypoint.mulesoft.com/debian/pubkey.gpg | sudo apt-key add -
echo "deb [arch=amd64] https://flex-packages.anypoint.mulesoft.com/debian $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/mulesoft.list
sudo apt update
sudo apt install -y flex-gateway
----

include::partial$reference-install-next-steps.adoc[tags=flex-download-install;flex-connected-vs-local]

[[install-amazon-linux]]
=== Amazon Linux

==== Software Requirements

Flex Gateway runs on the following Long Term Support (LTS) version of Amazon Linux:

* {empty}
include::partial$prerequisites.adoc[tag=amazon-linux]

==== Before You Begin

Before getting started, ensure that you have installed the following:

* link:https://gnupg.org/[gnupg2^]

==== Run Installation Commands

To download and install Flex Gateway as an Amazon Linux service run the command block which performs the following actions:

* Adds the Flex Gateway package repository with a reference to its public key
* Installs the Flex Gateway package

[source,ssh]
----
sudo tee /etc/yum.repos.d/flex-gateway.repo <<\EOF
[flex-gateway]
name = Anypoint Flex Gateway
baseurl = https://flex-packages.anypoint.mulesoft.com/amazonlinux/$releasever/main
gpgcheck=1
gpgkey=https://flex-packages.anypoint.mulesoft.com/amazonlinux/pubkey.gpg
repo_gpgcheck=1
enabled=1
EOF

sudo yum install -y flex-gateway
----

include::partial$reference-install-next-steps.adoc[tags=flex-download-install;flex-connected-vs-local]

[[install-rhel]]
=== Red Hat Enterprise Linux

==== Software Requirements

Flex Gateway runs on the following Long Term Support (LTS) versions of RHEL:

* {empty}
include::partial$prerequisites.adoc[tag=red-hat]

==== Before You Begin

Before getting started, ensure that you have installed the following:

* link:https://gnupg.org/[gnupg2^]

==== Run Installation Commands

To download and install Flex Gateway as a Red Hat Enterprise Linux service run the command block which performs the following actions:

* Adds the Flex Gateway package repository with a reference to its public key
* Installs the Flex Gateway package

[source,ssh]
----
sudo tee /etc/yum.repos.d/flex-gateway.repo <<\EOF
[flex-gateway]
name = Anypoint Flex Gateway
baseurl = https://flex-packages.anypoint.mulesoft.com/rhel/$releasever/main
gpgcheck=1
gpgkey=https://flex-packages.anypoint.mulesoft.com/rhel/pubkey.gpg
repo_gpgcheck=1
enabled=1
EOF

sudo yum install -y flex-gateway
----

include::partial$reference-install-next-steps.adoc[tags=flex-download-install;flex-connected-vs-local]

[[install-centos]]
=== CentOS

==== Software Requirements

Flex Gateway runs on the following Long Term Support (LTS) version of CentOS:

* {empty}
include::partial$prerequisites.adoc[tag=centos]

==== Before You Begin

Before getting started, ensure that you have installed the following:

* link:https://gnupg.org/[gnupg2^]

==== Run Installation Commands

To download and install Flex Gateway as an CentOS service run the command block which performs the following actions:

* Adds the Flex Gateway package repository with a reference to its public key
* Installs the Flex Gateway package

[source,ssh]
----
sudo tee /etc/yum.repos.d/flex-gateway.repo <<\EOF
[flex-gateway]
name = Anypoint Flex Gateway
baseurl = https://flex-packages.anypoint.mulesoft.com/centos/$releasever/main
gpgcheck=1
gpgkey=https://flex-packages.anypoint.mulesoft.com/centos/pubkey.gpg
repo_gpgcheck=1
enabled=1
EOF

sudo yum install -y flex-gateway
----

Due to issues with the CentOS package manager you might encounter the following error:
----
Error: Failed to download metadata for repo 'AppStream': Cannot prepare internal mirrorlist: No URLs in mirrorlist
----

If you encounter this error, run the following command:
[source,ssh]
----
sudo sed -i -e "s|mirrorlist=|#mirrorlist=|g" -e "s|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g" /etc/yum.repos.d/CentOS-*
----

include::partial$reference-install-next-steps.adoc[tags=flex-download-install;flex-connected-vs-local]

[[docker]]
== Download Flex Gateway for Use in a Docker Container 

Download the Flex Gateway container image to prepare for registering and running a gateway in a Docker container: 

. Download the Flex Gateway Docker image: 
+
[source,ssh,subs=attributes+]
----
docker pull {image-owner-lc}/flex-gateway:{gateway-ver-var}
----

. Verify that the download succeeded: 
+
[source,ssh,subs=attributes+]
----
docker images {image-owner-lc}/flex-gateway
----
+
When successful, the command lists the Flex Gateway container image, for example: 
+
[source,text,subs=attributes+]
----
REPOSITORY                   TAG
{image-owner-lc}/flex-gateway        {gateway-ver-var}
----

include::partial$reference-install-next-steps.adoc[tags=flex-download-install;flex-connected-vs-local]

[[kubernetes]]
== Download Flex Gateway for Use in a Kubernetes Cluster

Download the Flex Gateway container image to prepare for registering and running a gateway in a Kubernetes cluster: 

. Download the Flex Gateway Docker image: 
+
[source,ssh,subs=attributes+]
----
docker pull {image-owner-lc}/flex-gateway:{gateway-ver-var}
----

. Verify that the download succeeded: 
+
[source,ssh,subs=attributes+]
----
docker images {image-owner-lc}/flex-gateway
----
+
When successful, the command lists the Flex Gateway container image, for example: 
+
[source,text,subs=attributes+]
----
REPOSITORY                   TAG
{image-owner-lc}/flex-gateway        {gateway-ver-var}
----

include::partial$reference-install-next-steps.adoc[tags=flex-k8-download-install;flex-connected-vs-local-k8]


[[openshift]]
== Download Flex Gateway for Use in an OpenShift Cluster

Download the Flex Gateway container image to prepare for registering and running a gateway in an OpenShift cluster: 

. Download the Flex Gateway Docker image: 
+
[source,ssh,subs=attributes+]
----
docker pull {image-owner-lc}/flex-gateway:{gateway-ver-var}
----

. Verify that the download succeeded: 
+
[source,ssh,subs=attributes+]
----
docker images {image-owner-lc}/flex-gateway
----
+
When successful, the command lists the Flex Gateway container image, for example: 
+
[source,text,subs=attributes+]
----
REPOSITORY                   TAG
{image-owner-lc}/flex-gateway        {gateway-ver-var}
----

include::partial$reference-install-next-steps.adoc[tags=flex-k8-download-install;flex-connected-vs-local-k8]

== See Also

* xref:flex-gateway-getting-started.adoc[]
* xref:flex-review-prerequisites.adoc[]
* xref:flex-conn-reg-run.adoc[]
* xref:flex-local-reg-run.adoc[]
